--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-powerglitch": "^1.1.0",
     "react-router-dom": "^7.2.0",
     "react-router-hash-link": "^2.4.3",
+    "react-scroll-parallax": "^3.4.5",
     "tailwindcss": "^4.0.8"
   },
   "devDependencies": {
