--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -22,5 +23,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# database
+database.sqlite
+
 # local assets
 /src/assets/videos/background-dancing.mp4
+
